# mcp-server-template-python

./: README.md  pyproject.toml  server.py
