[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-mcp-project"
version = "0.1.0"
description = "A template MCP server project"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["template", "example", "awesome"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "httpx>=0.28.1",
    "requests>=2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/my-mcp-project"
"Bug Tracker" = "https://github.com/yourusername/my-mcp-project/issues"
"Repository" = "https://github.com/yourusername/my-mcp-project"

[project.scripts]
my-cli-command = "my_module:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
